[gd_scene load_steps=13 format=3 uid="uid://dbs076kggosn1"]

[ext_resource type="Script" path="res://Test/CandidateEvents/test_candidates.gd" id="1_q8efg"]
[ext_resource type="Script" path="res://Resources/candidate.gd" id="2_02q77"]
[ext_resource type="Script" path="res://Resources/Events/kingdom_event.gd" id="2_whwq8"]
[ext_resource type="Resource" uid="uid://dadtdvosui7gw" path="res://Dialogues/computer.dialogue" id="3_xih0e"]
[ext_resource type="Script" path="res://Resources/Events/event_condition.gd" id="4_rbpqn"]
[ext_resource type="Script" path="res://Resources/Events/kingdom_modifier.gd" id="6_oj13l"]
[ext_resource type="Resource" uid="uid://bcget58hmwe6h" path="res://Dialogues/dialogue.dialogue" id="7_144jo"]

[sub_resource type="Resource" id="Resource_puwfc"]
script = ExtResource("6_oj13l")
faith = 1
food = 1
force = 1

[sub_resource type="Resource" id="Resource_v60ab"]
script = ExtResource("2_whwq8")
internal_name = "candidate"
kingdom_modifier = SubResource("Resource_puwfc")
event_condition_collection = Array[ExtResource("4_rbpqn")]([])
probability = 100

[sub_resource type="Resource" id="Resource_ob2bb"]
script = ExtResource("2_02q77")
name = "Pepito"
presentation_dialoge = ExtResource("3_xih0e")
main_dialoge = ExtResource("7_144jo")
kingdom_event_collection = Array[ExtResource("2_whwq8")]([SubResource("Resource_v60ab")])

[sub_resource type="Resource" id="Resource_mpo2v"]
script = ExtResource("2_02q77")
name = "Pepito"
presentation_dialoge = ExtResource("3_xih0e")
main_dialoge = ExtResource("7_144jo")
kingdom_event_collection = Array[ExtResource("2_whwq8")]([SubResource("Resource_v60ab")])

[sub_resource type="Resource" id="Resource_r5vxm"]
script = ExtResource("2_02q77")
name = "Pepito"
presentation_dialoge = ExtResource("3_xih0e")
main_dialoge = ExtResource("7_144jo")
kingdom_event_collection = Array[ExtResource("2_whwq8")]([SubResource("Resource_v60ab")])

[node name="TestCandidateEvents" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8efg")
kingdom_candidate_collection = Array[ExtResource("2_02q77")]([SubResource("Resource_ob2bb"), SubResource("Resource_mpo2v"), SubResource("Resource_r5vxm")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
alignment = 1

[node name="Faith" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Faith"]
layout_mode = 2
text = "FAITH: "

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/Faith"]
layout_mode = 2
text = "4"

[node name="Food" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Food"]
layout_mode = 2
text = "FOOD:"

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/Food"]
layout_mode = 2
text = "4
"

[node name="Force" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Force"]
layout_mode = 2
text = "FORCE: "

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/Force"]
layout_mode = 2
text = "4
"

[node name="CenterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Example 1"

[node name="CheckButton2" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Example 2"

[node name="CheckButton3" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Example 3"

[node name="CheckButton4" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Example 4"

[node name="CheckButton5" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Example 5"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Execute Current Event
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "CandidateName"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Accept"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "CandidateName"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Accept"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "CandidateName"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "Accept"
